--- a/styles.css
+++ b/styles.css
@@ -291,6 +291,7 @@ video{
     }
 
     .detailsHeading{
+        font-size: 2rem;
         font-weight:600 ;
         margin-top: 2em;
         margin-bottom: 1.5em;
