--- a/styles.css
+++ b/styles.css
@@ -180,6 +180,7 @@ color: var(--duskColor);
     font-weight: 700;    
     font-size: 6rem;
     line-height: 6rem;
+    filter: drop-shadow(.3px .3px 1px rgb(101, 99, 99));
     overflow: hidden;
     }
 
@@ -326,10 +327,11 @@ video{
 }
 
 .aboutHero{
-    
+    filter: grayscale(9);
     margin: 0 auto;
     border-radius: 6px;
     max-width: 70%;
+    border: .1px solid #ccc;
 }
 
 .aboutBody{
@@ -450,6 +452,31 @@ footer a {
     }
 
 
+/* --------copyright */
+
+.endSlug{
+    display: flex;
+    justify-content: space-between;
+    padding: 0 2em;
+    background-color: var(--buttonPrimary);
+    color: #fff;
+    font-size: .7rem;
+}
+
+.endSlug a{
+    text-decoration: none;
+    color: #fff;
+}
+
+.endSlug a:hover,
+.endSlug a:focus{
+    color:var(--duskColor);
+}
+
+
+
+
+
 /* ----------Full Page Layout-------------- */
 
 
@@ -542,6 +569,7 @@ video{
     position: absolute;
     top: 0;
     left: 0;
+    background-color: #000;
     width: 100%;
     height: 100%;
     border-radius: 0 0 6px 6px;
@@ -728,6 +756,10 @@ min-width: 300px;
 
 }
 
+
+.endSlug{
+    font-size: .9rem;
+}
 
 .quote,
 .topBtn,
